# melodium

./: .crates-order  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS-COMPILATION.md  Cargo.toml  Notes  README.md  Xargo.toml  build.rs  something.txt
conv-mel/: Cargo.toml
conv-mel/src/: bool.rs  byte.rs  char.rs  f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  lib.rs  string.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
core-mel/: Cargo.toml
core-mel/src/: lib.rs  other.rs
core-mel/src/andere/: lol.rs  mod.rs
core-mel/src/ops/: bool.rs  f64.rs  i128.rs  i16.rs  i64.rs  i8.rs  mod.rs  string.rs
flow-mel/: Cargo.toml
flow-mel/mel/: bool.mel  char.mel  f64.mel  i128.mel  i16.mel  i8.mel  string.mel  u16.mel
flow-mel/src/: bool.rs  byte.rs  char.rs  f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  lib.rs  string.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  void.rs
libs/audio-mel/: CHANGELOG.md  Cargo.toml  README.md
libs/audio-mel/src/: audio_info.rs  channels.rs  decode.rs  encode.rs  lib.rs  record.rs
libs/cicd-mel/: CHANGELOG.md  Cargo.toml  README.md
libs/cicd-mel/mel/: data.mel  logging.mel  naive.mel  runners.mel  services.mel  steps.mel
libs/cicd-mel/src/: lib.rs
libs/distant-mel/: Cargo.toml  README.md
libs/distant-mel/src/: api.rs  lib.rs
libs/distrib-mel/: CHANGELOG.md  Cargo.toml  README.md
libs/distrib-mel/src/: lib.rs
libs/encoding-mel/: CHANGELOG.md  Cargo.toml  README.md
libs/encoding-mel/src/: lib.rs
libs/fs-mel/: CHANGELOG.md  Cargo.toml  README.md
libs/fs-mel/mel/: file.mel  local.mel  text.mel  util.mel
libs/fs-mel/src/: dir.rs  file.rs  filesystem.rs  lib.rs  local.rs  path.rs
libs/http-mel/: CHANGELOG.md  Cargo.toml  README.md
libs/http-mel/mel/: client.mel  new_client.mel  new_server.mel  server.mel
libs/http-mel/src/: client.rs  lib.rs  method.rs  new_client.rs  new_server.rs  server.rs  status.rs
libs/jaq-mel/: Cargo.toml  README.md
libs/jaq-mel/src/: lib.rs
libs/javascript-mel/: CHANGELOG.md  Cargo.toml  README.md
libs/javascript-mel/src/: lib.rs
libs/json-mel/: CHANGELOG.md  Cargo.toml  README.md
libs/json-mel/src/: lib.rs  value.rs
libs/log-mel/: CHANGELOG.md  Cargo.toml
libs/log-mel/mel/: file.mel  log.mel
libs/log-mel/src/: console.rs  lib.rs  logger.rs
libs/ml-mel/: CHANGELOG.md  Cargo.toml  README.md
libs/ml-mel/src/: lib.rs
melodium/: CHANGELOG.md  Cargo.toml  README.md  build.rs  install.sh
melodium-certs/: CHANGELOG.md  Cargo.toml  README.md  melodium-ca.pem
melodium-certs/src/: lib.rs
melodium-common/: CHANGELOG.md  Cargo.toml  README.md
melodium-common/src/: lib.rs
melodium-common/src/descriptor/: attribuable.rs  buildable.rs  collection.rs  context.rs  data.rs  data_trait.rs  data_type.rs  described_type.rs  designer.rs  documented.rs  flow.rs  function.rs  generic.rs  identified.rs  identifier.rs  identifier_requirement.rs  input.rs  loader.rs  mod.rs  model.rs  object.rs  output.rs  package.rs  package_requirement.rs  parameter.rs  parameterized.rs  status.rs  treatment.rs  variability.rs
melodium-common/src/executive/: context.rs  data.rs  data_traits.rs  function.rs  future.rs  input.rs  mod.rs  model.rs  object.rs  output.rs  result_status.rs  transmission.rs  treatment.rs  value.rs  world.rs
melodium-core/: CHANGELOG.md  Cargo.toml  README.md
melodium-core/src/: lib.rs
melodium-core/src/descriptor/: context.rs  data.rs  function.rs  mod.rs  model.rs  object.rs  source.rs  treatment.rs
melodium-core/src/executive/: mod.rs  traits.rs
melodium-distributed/: Cargo.toml  melodium-ca.der  melodium-ca.pem  melodium-chain.pem  melodium-ica.der  melodium-ica.pem  melodium-localhost.der  melodium-localhost.key  melodium-localhost.key.der  melodium-localhost.key.pem  melodium-localhost.pem  melodium-localhost.pfx
melodium-distributed/src/: error.rs  lib.rs  listen.rs  messages.rs  protocol.rs
melodium-distribution/: CHANGELOG.md  Cargo.toml  README.md  melodium-chain.pem  melodium-localhost.key.pem
melodium-distribution/src/: error.rs  listen.rs  messages.rs  protocol.rs
melodium-doc/: CHANGELOG.md  Cargo.toml  README.md
melodium-doc/src/: lib.rs
melodium-engine/: CHANGELOG.md  Cargo.toml  README.md
melodium-engine/src/: engine.rs  ids.rs  lib.rs
melodium-engine/src/building/: builder.rs  check.rs  contextual_environment.rs  genesis_environment.rs  host.rs  mod.rs  result.rs
melodium-engine/src/debug/: mod.rs
melodium-engine/src/descriptor/: mod.rs  model.rs  treatment.rs
melodium-engine/src/design/: connection.rs  mod.rs  model.rs  model_instanciation.rs  parameter.rs  scope.rs  treatment.rs  treatment_instanciation.rs  value.rs
melodium-engine/src/designer/: connection.rs  function_instanciation.rs  generic.rs  generic_instanciation.rs  mod.rs  model.rs  model_instanciation.rs  parameter.rs  reference.rs  scope.rs  treatment.rs  (+2 more)
melodium-lang/: CHANGELOG.md  Cargo.toml  README.md
melodium-lang/src/: error.rs  lib.rs  path.rs
melodium-lib/: Cargo.toml  README.md
melodium-lib/src/: lib.rs
melodium-loader/: CHANGELOG.md  Cargo.toml  README.md
melodium-loader/src/: compo.rs  lib.rs  loader.rs  loading_config.rs  loading_context.rs  package_manager.rs
melodium-macro/: CHANGELOG.md  Cargo.toml  README.md
melodium-macro/src/: data_traits.rs  lib.rs  object_traits.rs
melodium-repository/: CHANGELOG.md  Cargo.toml  README.md
melodium-repository/src/: error.rs  lib.rs  repository.rs  repository_config.rs  utils.rs
melodium-repository/tests/: network_test.rs
melodium-share/: CHANGELOG.md  Cargo.toml  README.md
melodium-share/src/: attribute.rs  collection.rs  connection_design.rs  context.rs  data.rs  data_trait.rs  data_type.rs  debug.rs  described_type.rs  entry.rs  flow.rs  function.rs  generic.rs  identifier.rs  input.rs  lib.rs  model.rs  model_design.rs  model_instanciation_design.rs  output.rs  parameter.rs  reporting.rs  treatment.rs  treatment_design.rs  treatment_instanciation_design.rs  value.rs  variability.rs
melodium/src/: lib.rs  main.rs
(+1197 files in other folders)
