[workspace]
resolver = "2"
members = [
    "libs/cicd-mel",
    "libs/distrib-mel",
    "libs/encoding-mel",
    "libs/fs-mel",
    "libs/http-mel",
    "libs/javascript-mel",
    "libs/json-mel",
    "libs/log-mel",
    "libs/net-mel",
    "libs/process-mel",
    "libs/regex-mel",
    "libs/sql-mel",
    "libs/std-mel",
    "libs/work-mel",
    "melodium",
    "melodium-certs",
    "melodium-common",
    "melodium-core",
    "melodium-distribution",
    "melodium-doc",
    "melodium-engine",
    "melodium-lang",
    "melodium-lib",
    "melodium-loader",
    "melodium-macro",
    "melodium-repository",
    "melodium-share",
    ]
exclude = [
    "tests/*"
    ]

[profile.release]
strip = true

# Fix for sql-mel causing issue for x86_64-pc-windows-gnu target in debug mode:
# `/usr/bin/x86_64-w64-mingw32-ld: error: export ordinal too large`
# Not that distrib-mel is also encountering this issue but that mitigation is not sufficient for it,
# so for *-pc-windows-gnu with distrib-mel, only --release mode is possible.
[profile.dev.package.sql-mel]
opt-level=3
codegen-units=1
