[workspace]
resolver = "2"
members = [
    "libs/cicd-mel",
    "libs/distrib-mel",
    "libs/encoding-mel",
    "libs/fs-mel",
    "libs/http-mel",
    "libs/javascript-mel",
    "libs/json-mel",
    "libs/log-mel",
    "libs/net-mel",
    "libs/process-mel",
    "libs/regex-mel",
    "libs/sql-mel",
    "libs/std-mel",
    "libs/work-mel",
    "melodium",
    "melodium-certs",
    "melodium-common",
    "melodium-core",
    "melodium-distribution",
    "melodium-doc",
    "melodium-engine",
    "melodium-lang",
    "melodium-lib",
    "melodium-loader",
    "melodium-macro",
    "melodium-repository",
    "melodium-share",
    ]
exclude = [
    "tests/*"
    ]

[profile.release]
strip = true

[profile.pc-windows-gnu]
inherits = "release"
codegen-units=1
