[package]
name = "melodium-certs"
version = "0.9.0-pre.4"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium public certificates"

[lib]
name = "melodium_certs"
