[package]
name = "melodium-common"
version = "0.7.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Common Mélodium elements and traits"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_common"

[dependencies]
async-trait = "~0.1.71"
downcast-rs = "~1.2.0"
hex = "0.4"
#num-traits = "0.2.17"
semver = "~1.0.17"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
