[package]
name = "melodium-core"
version = "0.8.0-rc3"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Core implementation for compiled Mélodium elements"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_core"

[dependencies]
melodium-common = { path = "../melodium-common", version = "=0.8.0-rc3" }
erased-serde = "0.4"
once_cell = "1.18.0"
serde = { version = "1", features = ["derive"] }

[features]
default = []
doc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
