[package]
name = "melodium-distributed"
version = "0.8.0"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium language parsing and semantic analyser"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]
publish = false

[lib]
name = "melodium_distributed"

[dependencies]
melodium-common = { path = "../melodium-common", version = "0.8.0" }
melodium-engine = { path = "../melodium-engine", version = "0.8.0" }
melodium-sharing = { path = "../melodium-sharing", version = "0.8.0" }
melodium-loader = { path = "../melodium-loader", version = "0.8.0" }
async-std = "1.12"
ciborium = "0.2.2"
futures = "~0.3.28"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(any(all(not(target_os = "windows"), not(target_vendor = "apple")), all(target_os = "windows", target_env = "gnu")))'.dependencies.futures-rustls]
version = "0.26"
default-features = false
features = ["ring"]

[target.'cfg(any(target_env = "msvc", target_vendor = "apple"))'.dependencies.async-native-tls]
version = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
schannel = {version = "0.1.15"}

