[package]
name = "melodium-distribution"
version = "0.9.0-pre.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium language parsing and semantic analyser"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]
publish = false

[lib]
name = "melodium_distribution"

[dependencies]
melodium-common = { path = "../melodium-common", version = "=0.9.0-pre.1" }
melodium-engine = { path = "../melodium-engine", version = "=0.9.0-pre.1" }
melodium-share = { path = "../melodium-share", version = "=0.9.0-pre.1" }
melodium-loader = { path = "../melodium-loader", version = "=0.9.0-pre.1" }
async-std = { version = "1.12", features = ["unstable"] }
ciborium = "0.2.2"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.5.0", features = ["serde"] }

[target.'cfg(any(all(not(target_os = "windows"), not(target_vendor = "apple")), all(target_os = "windows", target_env = "gnu")))'.dependencies.futures-rustls]
version = "0.26"
default-features = false
features = ["ring"]

[target.'cfg(any(all(not(target_os = "windows"), not(target_vendor = "apple")), all(target_os = "windows", target_env = "gnu")))'.dependencies.rustls-pemfile]
version = "2.1.3"

[target.'cfg(any(target_env = "msvc", target_vendor = "apple"))'.dependencies.async-native-tls]
version = "0.5"

[target.'cfg(any(target_env = "msvc", target_vendor = "apple"))'.dependencies.native-tls]
version = "0.2.11"
