[package]
name = "melodium-distribution"
version = "0.9.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium language parsing and semantic analyser"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_distribution"

[dependencies]
melodium-common = { path = "../melodium-common", version = "0.9.1" }
melodium-engine = { path = "../melodium-engine", version = "0.9.1" }
melodium-share = { path = "../melodium-share", version = "0.9.1" }
melodium-loader = { path = "../melodium-loader", version = "0.9.1" }
async-std = { version = "1.13", features = ["unstable"] }
ciborium = "0.2.2"
futures = "0.3.28"
futures-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.5.0", features = ["serde"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "i686-unknown-linux-gnu",
    "i686-unknown-linux-musl",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch54-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-gnu",
    "i686-pc-windows-msvc",
    "wasm32-unknown-unknown"
]
