[package]
name = "melodium-engine"
version = "0.5.3"
authors = ["Quentin VIGNAUD <qvignaud@gmail.com>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium core engine implementation."
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_engine"

[dependencies]
melodium-common = { path = "../melodium-common", version = "0.5.3" }
async-std = "~1.12"
async-trait = "~0.1.60"
futures = "~0.3.24"
lazy_static = "~1.4"

[features]
default = ["doc"]
doc = []
