[package]
name = "melodium-engine"
version = "0.7.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium core engine and executor implementation"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_engine"

[dependencies]
melodium-common = { path = "../melodium-common", version = "0.7.1" }
async-std = "1.12"
async-trait = "0.1.71"
downcast-rs = "1.2.0"
futures = "~0.3.28"
lazy_static = "1.4"

[features]
default = []
doc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
