[package]
name = "melodium-lang"
version = "0.6.0"
authors = ["Quentin VIGNAUD <qvignaud@gmail.com>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium language parsing and semantic analyser"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_lang"

[dependencies]
melodium-common = { path = "../melodium-common", version = "0.6.0" }
melodium-engine = { path = "../melodium-engine", version = "0.6.0" }
convert_case = { version = "0.6", optional = true }
hex = "0.4"
itertools = { version = "0.10.5", optional = true }
lazy_static = "~1.4"
regex = "1.6"

[features]
default = ["restitution"]
restitution = ["convert_case", "itertools"]
