[package]
name = "melodium-lang"
version = "0.8.0-rc2"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium language parsing and semantic analyser"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_lang"

[dependencies]
melodium-common = { path = "../melodium-common", version = "=0.8.0-rc2" }
melodium-engine = { path = "../melodium-engine", version = "=0.8.0-rc2" }
convert_case = { version = "0.6", optional = true }
hex = "0.4"
itertools = { version = "0.11.0", optional = true }
lazy_static = "1.4"
regex = "1.9"

[features]
default = ["restitution"]
restitution = ["convert_case", "itertools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
