[package]
name = "melodium-loader"
version = "0.6.0"
authors = ["Quentin VIGNAUD <qvignaud@gmail.com>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Loading engine for Mélodium, with dependency resolution and retrieval"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_loader"

[dependencies]
melodium-common = { path = "../melodium-common", version = "0.6.0" }
melodium-engine = { path = "../melodium-engine", version = "0.6.0" }
melodium-lang = { path = "../melodium-lang", version = "0.6.0", optional = true }
semver = "~1.0.16"
glob = { version = "~0.3.1", optional = true }
toml = { version = "~0.7.0", optional = true }

[features]
default = ["script", "filesystem"]
script = ["melodium-lang"]
filesystem = ["glob", "toml"]
