[package]
name = "melodium-loader"
version = "0.7.0"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Loading engine for Mélodium, with dependency resolution and retrieval"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_loader"

[dependencies]
melodium-common = { path = "../melodium-common", version = "=0.7.0" }
melodium-engine = { path = "../melodium-engine", version = "=0.7.0" }
melodium-lang = { path = "../melodium-lang", version = "=0.7.0", optional = true }
melodium-repository = { path = "../melodium-repository", version = "=0.7.0" }
banzai = { version = "0.3.1", optional = true }
bzip2-rs = { version = "0.1.2", features = ["rustc_1_51"], optional = true }
glob = { version = "~0.3.1", optional = true }
libloading = "0.8.0"
once_cell = "1.18.0"
semver = "~1.0.17"
tar = { version = "0.4.38", default-features = false, optional = true }
toml = { version = "~0.7.3" }

[features]
default = ["script"]
filesystem = ["glob", "banzai"]
jeu = ["tar", "bzip2-rs"]
network = ["melodium-repository/network"]
script = ["melodium-lang"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

