[package]
name = "melodium-macro"
version = "0.6.0"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Macro tooling for compiled Mélodium packages"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_macro"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "derive", "extra-traits"] }
quote = "1.0"
litrs = "0.4.0"
convert_case = "0.6"
proc-macro2 = "1.0"
glob = "0.3.1"
toml = "0.7.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
