[package]
name = "melodium-macro"
version = "0.9.0-pre.5"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Macro tooling for compiled Mélodium packages"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_macro"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "derive", "extra-traits"] }
quote = "1.0"
litrs = "0.4.0"
convert_case = "0.6"
proc-macro2 = "1.0"
glob = "0.3.1"
toml = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
