[package]
name = "melodium-repository"
version = "0.8.0-rc2"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Repository managment crate for Mélodium, with dependency resolution and retrieval"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib"]
name = "melodium_repository"

[[bin]]
name = "melodium-repository"
required-features = [ "cargo" ]
doc = false

[dependencies]
melodium-common = { path = "../melodium-common", version = "=0.8.0-rc2" }
async-std = { version = "~1.12", optional = true }
cargo_author = "1.0.6"
cargo_metadata = { version = "0.18", optional = true }
chrono = { version = "0.4", features = ["clock", "serde"] }
iso639-1 = { version = "0.4" }
once_cell = { version = "1.18.0", optional = true }
platforms = { version = "3.0.2", features = ["serde"] }
semver = { version = "~1.0.17", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
network = [ "http-client", "once_cell", "async-std" ]
cargo = [ "cargo_metadata" ]

[target.'cfg(all(not(target_env = "msvc"), not(target_vendor = "apple")))'.dependencies.http-client]
version = "6"
default-features = false
optional = true
features = ["h1_client", "rustls"]

[target.'cfg(any(target_env = "msvc", target_vendor = "apple"))'.dependencies.http-client]
version = "6"
default-features = false
optional = true
features = ["h1_client", "native-tls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
