[package]
name = "melodium-repository"
version = "0.9.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Repository managment crate for Mélodium, with dependency resolution and retrieval"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib"]
name = "melodium_repository"

[[bin]]
name = "melodium-repository"
required-features = [ "cargo" ]
doc = false

[dependencies]
melodium-common = { path = "../melodium-common", version = "0.9.1" }
async-std = { version = "1.13", optional = true }
cargo_author = "1.0.6"
cargo_metadata = { version = "0.19", optional = true }
chrono = { version = "0.4", features = ["clock", "serde"] }
http-client = { version = "6", default-features = false, features = ["h1_client", "rustls"], optional = true }
iso639-1 = { version = "0.4" }
once_cell = { version = "1.18.0", optional = true }
platforms = { version = "3.0.2", features = ["serde"] }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
network = [ "http-client", "once_cell", "async-std" ]
cargo = [ "cargo_metadata" ]

[package.metadata.docs.rs]
features = ["network"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "i686-unknown-linux-gnu",
    "i686-unknown-linux-musl",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch54-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-gnu",
    "i686-pc-windows-msvc",
    "wasm32-unknown-unknown"
]
