[package]
name = "melodium-share"
version = "0.9.0-pre.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium language parsing and semantic analyser"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]
publish = false

[lib]
name = "melodium_share"

[dependencies]
melodium-common = { path = "../melodium-common", version = "=0.9.0-pre.1" }
melodium-engine = { path = "../melodium-engine", version = "=0.9.0-pre.1" }
cbor4ii = { version = "0.3.3", features = ["serde1"] }
erased-serde = "0.4"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
#ciborium = "0.2.2"

