[package]
name = "melodium-share"
version = "0.9.0-pre.2"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium language parsing and semantic analyser"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_share"

[features]
webassembly = ["tsify", "wasm-bindgen"]

[dependencies]
melodium-common = { path = "../melodium-common", version = "=0.9.0-pre.2" }
melodium-engine = { path = "../melodium-engine", version = "=0.9.0-pre.2" }
cbor4ii = { version = "0.3.3", features = ["serde1"] }
erased-serde = "0.4"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
tsify = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }

